<resources>
    <string name="app_name">Meals App</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter_by">Filter by</string>
    <string name="menu_category">Category</string>
    <string name="menu_area">Area</string>
    <string name="dark_mode">Dark mode</string>
    <string name="category_list">Category list</string>
    <string name="area_list">Area list</string>
    <string name="info_about_category">Info about %1$s</string>
    <string name="category_and_area" translatable="false">%1$s / %2$s</string>
    <string name="measure_and_name" translatable="false">%1$s %2$s</string>
    <string name="meal_list_by">List of %1$s meals</string>
    <string name="mark_meal_as_favorite">Mark %1$s as favorite</string>
    <string name="remove_meal_from_favorite">Remove %1$s from favorites</string>
    <string name="meal_list_favorites">List of favorite meals</string>
    <string name="meal_removed_from_favorites">%1$s removed from favorites.</string>
    <string name="error_no_results">No results found.</string>
    <string name="error_no_favorites">No favorite meals found.</string>
    <string name="error_no_internet">Internet connection not available.\nYou can still view your favorite meals.</string>
    <string name="error_no_internet_favorite">You need an internet connection to add favorite meals.</string>
    <string name="error_generic">An unexpected error occurred.</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="share">Share</string>
    <string name="share_text">Check out this %1$s recipe: https://www.themealdb.com/meal/%2$s</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
</resources>