<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites"
        app:showAsAction="ifRoom|collapseActionView"
        app:iconTint="@color/button_tint"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/button_tint"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom|collapseActionView"
        app:iconTint="@color/button_tint"/>

    <item
        android:id="@+id/action_filter_by"
        android:title="@string/menu_filter_by"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/action_filter_by_category"
                android:title="@string/menu_category" />
            <item
                android:id="@+id/action_filter_by_area"
                android:title="@string/menu_area" />
        </menu>
    </item>
</menu>